improve finding swscale lib
On Ubuntu 18.04, at least, pkg-config knows swscale as
libswscale. This change should be backwards-compatible, that is,
if it found swscale before, it should still find it (and the same one
it used to find).

--- a/libfreerdp/CMakeLists.txt
+++ b/libfreerdp/CMakeLists.txt
@@ -97,7 +97,7 @@ else(SWScale_FOUND)
         include_directories(${CAIRO_INCLUDE_DIR})
         freerdp_library_add(${CAIRO_LIBRARY})
     else(CAIRO_FOUND)
-        message(WARNING "neigter swscale nor libcairo detected, compiling without image scaling support!")
+        message(WARNING "neither swscale nor libcairo detected, compiling without image scaling support!")
     endif(CAIRO_FOUND)
 endif(SWScale_FOUND)
 
